Bug 151484 - Data Validity list looses separation when saving as XLS
Summary: Data Validity list looses separation when saving as XLS
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.1.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, filter:xls, regression
Depends on:
Blocks:
 
Reported: 2022-10-12 10:54 UTC by Paulo Horta
Modified: 2022-11-28 11:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Source ods file to test. (7.78 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-10-13 01:28 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paulo Horta 2022-10-12 10:54:49 UTC
Description:
If a cell has Data Validity LIST separated by lines:
1
2
3
When saved as XLS, it looses the separation, resulting in very option on the same line:
123

This does not occur when saving as ODS or XLSX

Steps to Reproduce:
1. Add Data Validation to a cell, with several list items
   Example:
   1
   2
   3
2. Save as XLS
3. Close the file
4. ReOpen the file and check Data Validity in the cell
5. Notice that the example becomes "123"

Actual Results:
123

Expected Results:
1
2
3


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 m_a_riosv 2022-10-13 01:28:37 UTC
Created attachment 183009 [details]
Source ods file to test.

Reprducible.
Version: 7.4.2.1 (x64) / LibreOffice Community
Build ID: 681d65acd9ede00dd724d6716f21cabfdcc95bd2
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a7683a16e98def4198e1f74a93fecdaacbf639e7
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
Comment 2 raal 2022-10-24 20:52:54 UTC
Confirm Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f3a82a8ba51195cf31b0f78164735acc7ebbcd2f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but not in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 raal 2022-10-24 21:08:17 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one?
Thanks
 58f4f284914d48bc4c138067d03d618cba2b6166 is the first bad commit
commit 58f4f284914d48bc4c138067d03d618cba2b6166
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Mar 18 11:28:05 2022 +0100

    source fbb41798b86c5ed35eb80aa07a5ee7c9866ac4e8

https://git.libreoffice.org/core/+/fbb41798b86c5ed35eb80aa07a5ee7c9866ac4e8
Comment 4 Commit Notification 2022-10-25 13:23:57 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ff56812741029ad17204cff53357751687d9b6c

tdf#151484 Data Validity list looses separation when saving as XLS

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 m_a_riosv 2022-10-26 13:15:28 UTC
Verified
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17dfc9a9da009cc23d2222e3fb4e2cef9c97d581
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
Comment 6 Commit Notification 2022-11-01 10:16:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/992529ad3c143a7a95124851da6a712cb3d65605

tdf#151484 Data Validity list looses separation when saving as XLS

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-11-28 11:09:40 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff0315d7c000bee784b97c385fccaa300210172a

tdf#151484: sc_subsequent_export_test2: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.