tdf#151484 Data Validity list looses separation when saving as XLS

regression from
    commit fbb41798b86c5ed35eb80aa07a5ee7c9866ac4e8
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Mar 18 09:46:52 2022 +0200
    tdf#133603 remove some string copying

Change-Id: Ie241a7d5e54673b35c643c7c20dc100ba7925647
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141808
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>